--- a/generators/react-native/templates/app/modules/entities/entity-detail-screen.js.ejs
+++ b/generators/react-native/templates/app/modules/entities/entity-detail-screen.js.ejs
@@ -1,39 +1,39 @@
 import React from 'react'
-import { ActivityIndicator, ScrollView, Text, <% if (fieldsContainImageBlob) { %>Image, <% } %>View } from 'react-native';
+import { ActivityIndicator, ScrollView, Text, <% if (entity.fieldsContainImageBlob) { %>Image, <% } %>View } from 'react-native';
 import { connect } from 'react-redux'
 import { useFocusEffect } from '@react-navigation/native';
-<%_ if (fieldsContainLocalDate) { _%>
+<%_ if (entity.fieldsContainLocalDate) { _%>
 import { convertLocalDateToString } from '../../../shared/util/date-transforms'
 <%_ } _%>
 
-import <%= entityNameCapitalized %>Actions from './<%= entityFileName %>.reducer'
+import <%= entity.entityNameCapitalized %>Actions from './<%= entity.entityFileName %>.reducer'
 import RoundedButton from '../../../shared/components/rounded-button/rounded-button'
-import <%= entityNameCapitalized %>DeleteModal from './<%= entityFileName %>-delete-modal';
-import styles from './<%= entityFileName %>-styles'
+import <%= entity.entityNameCapitalized %>DeleteModal from './<%= entity.entityFileName %>-delete-modal';
+import styles from './<%= entity.entityFileName %>-styles'
 
-function <%= entityNameCapitalized %>DetailScreen(props) {
-  const { route, get<%= entityNameCapitalized %>, navigation, <%= entityInstance %>, fetching, error } = props;
+function <%= entity.entityNameCapitalized %>DetailScreen(props) {
+  const { route, get<%= entity.entityNameCapitalized %>, navigation, <%= entity.entityInstance %>, fetching, error } = props;
   const [deleteModalVisible, setDeleteModalVisible] = React.useState(false);
   // prevents display of stale reducer data
-  const entityId = <%= entityInstance %>?.id ?? null;
+  const entityId = <%= entity.entityInstance %>?.id ?? null;
   const routeEntityId = route.params?.entityId ?? null;
   const correctEntityLoaded = routeEntityId && entityId && routeEntityId.toString() === entityId.toString();
 
   useFocusEffect(
     React.useCallback(() => {
       if (!routeEntityId) {
-        navigation.navigate('<%= entityNameCapitalized %>');
+        navigation.navigate('<%= entity.entityNameCapitalized %>');
       } else {
         setDeleteModalVisible(false);
-        get<%= entityNameCapitalized %>(routeEntityId);
+        get<%= entity.entityNameCapitalized %>(routeEntityId);
       }
-    }, [routeEntityId, get<%= entityNameCapitalized %>, navigation]),
+    }, [routeEntityId, get<%= entity.entityNameCapitalized %>, navigation]),
   );
 
   if (!entityId && !fetching && error) {
     return (
       <View style={styles.loading}>
-        <Text>Something went wrong fetching the <%= entityNameCapitalized %>.</Text>
+        <Text>Something went wrong fetching the <%= entity.entityNameCapitalized %>.</Text>
       </View>
     );
   }
@@ -45,60 +45,60 @@ function <%= entityNameCapitalized %>DetailScreen(props) {
     );
   }
   return (
-    <ScrollView style={styles.container} contentContainerStyle={styles.paddedScrollView} testID="<%= entityInstance %>DetailScrollView">
+    <ScrollView style={styles.container} contentContainerStyle={styles.paddedScrollView} testID="<%= entity.entityInstance %>DetailScrollView">
       <Text style={styles.label}>Id:</Text>
-      <Text>{<%= entityInstance %>.id}</Text>
-      <%_ fields.filter(field => !field.id).forEach(function (field) { _%>
+      <Text>{<%= entity.entityInstance %>.id}</Text>
+      <%_ entity.fields.filter(field => !field.id).forEach(function (field) { _%>
       {/* <%= field.fieldNameCapitalized %> Field */}
       <Text style={styles.label}><%= field.fieldNameCapitalized %>:</Text>
       <%_ if (field.fieldType === 'LocalDate') { _%>
-        <Text testID='<%= field.fieldName %>'>{convertLocalDateToString(<%= entityInstance %>.<%= field.fieldName %>)}</Text>
+        <Text testID='<%= field.fieldName %>'>{convertLocalDateToString(<%= entity.entityInstance %>.<%= field.fieldName %>)}</Text>
       <%_ } else if (field.fieldType === 'ZonedDateTime' || field.fieldType === 'Instant' || field.fieldType === 'Boolean') { _%>
-        <Text testID='<%= field.fieldName %>'>{String(<%= entityInstance %>.<%= field.fieldName %>)}</Text>
+        <Text testID='<%= field.fieldName %>'>{String(<%= entity.entityInstance %>.<%= field.fieldName %>)}</Text>
       <%_ } else if (field.fieldType === 'byte[]' && field.fieldTypeBlobContent === 'any') { _%>
-        <Text testID='<%= field.fieldName %>'>Open {<%= entityInstance %>.<%= field.fieldName %>ContentType} (not implemented)</Text>
+        <Text testID='<%= field.fieldName %>'>Open {<%= entity.entityInstance %>.<%= field.fieldName %>ContentType} (not implemented)</Text>
       <%_ } else if (field.fieldType === 'byte[]' && field.fieldTypeBlobContent === 'image') { _%>
-        <Text testID='<%= field.fieldName %>ContentType'>{<%= entityInstance %>.<%= field.fieldName %>ContentType}</Text>
+        <Text testID='<%= field.fieldName %>ContentType'>{<%= entity.entityInstance %>.<%= field.fieldName %>ContentType}</Text>
         <Image
           testID="<%= field.fieldName %>"
           style={styles.imageBlob}
-          source={{ uri: `data:${<%= entityInstance %>.<%= field.fieldName %>ContentType};base64,${<%= entityInstance %>.<%= field.fieldName %>}` }}
+          source={{ uri: `data:${<%= entity.entityInstance %>.<%= field.fieldName %>ContentType};base64,${<%= entity.entityInstance %>.<%= field.fieldName %>}` }}
         />
       <%_ } else { _%>
-        <Text testID='<%= field.fieldName %>'>{<%= entityInstance %>.<%= field.fieldName %>}</Text>
+        <Text testID='<%= field.fieldName %>'>{<%= entity.entityInstance %>.<%= field.fieldName %>}</Text>
       <%_ } _%>
       <%_ }) _%>
-      <%_ relationships.filter(relation => relation.ownerSide).forEach(function (relation) { _%>
+      <%_ entity.relationships.filter(relation => relation.ownerSide).forEach(function (relation) { _%>
         <Text style={styles.label}><%= relation.relationshipNameHumanized %>:</Text>
         <%_ if (relation.relationshipType === 'many-to-many') { _%>
-        {<%= entityInstance %>.<%= relation.relationshipNamePlural %> && <%= entityInstance %>.<%= relation.relationshipNamePlural %>.map((entity, index) => (
+        {<%= entity.entityInstance %>.<%= relation.relationshipNamePlural %> && <%= entity.entityInstance %>.<%= relation.relationshipNamePlural %>.map((entity, index) => (
           <Text key={index} testID={`<%= relation.relationshipNamePlural %>-${index}`}>{String(entity.<%= relation.otherEntityField %> || '')}</Text>
         ))}
         <%_ } else { _%>
-        <Text testID='<%= relation.relationshipName %>'>{String(<%= entityInstance %>.<%= relation.relationshipName %> ? <%= entityInstance %>.<%= relation.relationshipName %>.<%= relation.otherEntityField %> : '')}</Text>
+        <Text testID='<%= relation.relationshipName %>'>{String(<%= entity.entityInstance %>.<%= relation.relationshipName %> ? <%= entity.entityInstance %>.<%= relation.relationshipName %>.<%= relation.otherEntityField %> : '')}</Text>
         <%_ } _%>
       <%_ }) _%>
 
       <View style={styles.entityButtons}>
         <RoundedButton
           text="Edit"
-          onPress={() => navigation.navigate('<%= entityNameCapitalized %>Edit', { entityId })}
-          accessibilityLabel={'<%= entityNameCapitalized %> Edit Button'}
-          testID="<%= entityInstance %>EditButton"
+          onPress={() => navigation.navigate('<%= entity.entityNameCapitalized %>Edit', { entityId })}
+          accessibilityLabel={'<%= entity.entityNameCapitalized %> Edit Button'}
+          testID="<%= entity.entityInstance %>EditButton"
         />
         <RoundedButton
           text="Delete"
           onPress={() => setDeleteModalVisible(true)}
-          accessibilityLabel={'<%= entityNameCapitalized %> Delete Button'}
-          testID="<%= entityInstance %>DeleteButton"
+          accessibilityLabel={'<%= entity.entityNameCapitalized %> Delete Button'}
+          testID="<%= entity.entityInstance %>DeleteButton"
         />
         {deleteModalVisible && (
-          <<%= entityNameCapitalized %>DeleteModal
+          <<%= entity.entityNameCapitalized %>DeleteModal
             navigation={navigation}
             visible={deleteModalVisible}
             setVisible={setDeleteModalVisible}
-            entity={<%= entityInstance %>}
-            testID="<%= entityInstance %>DeleteModal"
+            entity={<%= entity.entityInstance %>}
+            testID="<%= entity.entityInstance %>DeleteModal"
           />
         )}
       </View>
@@ -108,21 +108,21 @@ function <%= entityNameCapitalized %>DetailScreen(props) {
 
 const mapStateToProps = (state) => {
   return {
-    <%= entityInstance %>: state.<%= entityInstancePlural %>.<%= entityInstance %>,
-    error: state.<%= entityInstancePlural %>.errorOne,
-    fetching: state.<%= entityInstancePlural %>.fetchingOne,
-    deleting: state.<%= entityInstancePlural %>.deleting,
-    errorDeleting: state.<%= entityInstancePlural %>.errorDeleting
+    <%= entity.entityInstance %>: state.<%= entity.entityInstancePlural %>.<%= entity.entityInstance %>,
+    error: state.<%= entity.entityInstancePlural %>.errorOne,
+    fetching: state.<%= entity.entityInstancePlural %>.fetchingOne,
+    deleting: state.<%= entity.entityInstancePlural %>.deleting,
+    errorDeleting: state.<%= entity.entityInstancePlural %>.errorDeleting
   }
 }
 
 const mapDispatchToProps = (dispatch) => {
   return {
-    get<%= entityNameCapitalized %>: (id) => dispatch(<%= entityNameCapitalized %>Actions.<%= entityInstance %>Request(id)),
-    getAll<%= entityNamePlural %>: (options) => dispatch(<%= entityNameCapitalized %>Actions.<%= entityInstance %>AllRequest(options)),
-    delete<%= entityNameCapitalized %>: (id) => dispatch(<%= entityNameCapitalized %>Actions.<%= entityInstance %>DeleteRequest(id)),
-    reset<%= entityNamePlural %>: () => dispatch(<%= entityNameCapitalized %>Actions.<%= entityInstance %>Reset()),
+    get<%= entity.entityNameCapitalized %>: (id) => dispatch(<%= entity.entityNameCapitalized %>Actions.<%= entity.entityInstance %>Request(id)),
+    getAll<%= entity.entityNamePlural %>: (options) => dispatch(<%= entity.entityNameCapitalized %>Actions.<%= entity.entityInstance %>AllRequest(options)),
+    delete<%= entity.entityNameCapitalized %>: (id) => dispatch(<%= entity.entityNameCapitalized %>Actions.<%= entity.entityInstance %>DeleteRequest(id)),
+    reset<%= entity.entityNamePlural %>: () => dispatch(<%= entity.entityNameCapitalized %>Actions.<%= entity.entityInstance %>Reset()),
   }
 }
 
-export default connect(mapStateToProps, mapDispatchToProps)(<%= entityNameCapitalized %>DetailScreen)
+export default connect(mapStateToProps, mapDispatchToProps)(<%= entity.entityNameCapitalized %>DetailScreen)
